derive_tests/tests/compile_fail/no_validations.rs
use validify::Validate;

#[derive(Validate)]
struct Test {
    #[validate()]
    s: String,
}

fn main() {}
