derive_tests/tests/compile_fail/no_validations.stderr
error: unexpected end of input, expected nested attribute
 --> tests/compile_fail/no_validations.rs:5:16
  |
5 |     #[validate()]
  |                ^
